[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/zombie/skeleton-move_13.png" type="Texture" id=1]
[ext_resource path="res://assets/zombie/skeleton-move_14.png" type="Texture" id=2]
[ext_resource path="res://assets/zombie/skeleton-move_16.png" type="Texture" id=3]
[ext_resource path="res://assets/zombie/skeleton-move_15.png" type="Texture" id=4]
[ext_resource path="res://assets/zombie/skeleton-move_0.png" type="Texture" id=5]
[ext_resource path="res://assets/zombie/skeleton-move_3.png" type="Texture" id=6]
[ext_resource path="res://assets/zombie/skeleton-move_4.png" type="Texture" id=7]
[ext_resource path="res://assets/zombie/skeleton-move_5.png" type="Texture" id=8]
[ext_resource path="res://assets/zombie/skeleton-move_6.png" type="Texture" id=9]
[ext_resource path="res://assets/zombie/skeleton-move_1.png" type="Texture" id=10]
[ext_resource path="res://assets/zombie/skeleton-move_7.png" type="Texture" id=11]
[ext_resource path="res://assets/zombie/skeleton-move_2.png" type="Texture" id=12]
[ext_resource path="res://assets/zombie/skeleton-move_11.png" type="Texture" id=13]
[ext_resource path="res://assets/zombie/skeleton-move_12.png" type="Texture" id=14]
[ext_resource path="res://assets/zombie/skeleton-move_8.png" type="Texture" id=15]
[ext_resource path="res://assets/zombie/skeleton-move_9.png" type="Texture" id=16]
[ext_resource path="res://assets/zombie/skeleton-move_10.png" type="Texture" id=17]
[ext_resource path="res://Entities/Zombie/Zombie.gd" type="Script" id=18]
[ext_resource path="res://assets/zombie/bloodsplat.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 49.4065

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 0, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 480, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 960, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 1440, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 1920, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 2400, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 2880, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 3360, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 3840, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 4320, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 4800, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 5280, 0, 480, 480 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 19 )
region = Rect2( 5760, 0, 480, 480 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "splatter",
"speed": 20.0
} ]

[sub_resource type="OccluderPolygon2D" id=17]
polygon = PoolVector2Array( -11, -27, -11, 25, -45, 1 )

[node name="Zombie" type="Area2D"]
script = ExtResource( 18 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "walk"
frame = 9
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BloodSplatter" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 74, 6 )
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 16 )
animation = "splatter"

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 17 )

[connection signal="area_entered" from="." to="." method="_on_Zombie_area_entered"]
[connection signal="animation_finished" from="BloodSplatter" to="." method="_on_BloodSplatter_animation_finished"]
